--- a/10x19-coding/src/scss/styles.scss
+++ b/10x19-coding/src/scss/styles.scss
@@ -1,73 +1,76 @@
-@import "reset.scss";
+@import "reset";
+@import "_variables";
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: serif;
-}
-
-.layout {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
+  background-color: $bg;
   display: grid;
-  grid-template-columns: 30vw 40vw 30vw;
-  grid-template-rows: repeat(12, 1fr);
-  div {
+  grid-template-columns: 1.5fr 1.9fr 1.5fr;
+  grid-template-rows: 1fr 5fr 1fr;
+  gap: 1px;
+  & > * {
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
-    border-color: #af7732;
-    &:hover {
-      background-color: #af7732;
-      color: white;
+    color: $bg;
+    font-size: 22px;
+    text-transform: uppercase;
+  }
+  .menu {
+    grid-column-start: -2;
+  }
+  .center-image {
+    grid-column: 2 / -2;
+    grid-row: 2 / -2;
+    background-image: url("https://images.unsplash.com/photo-1583309219338-a582f1f9ca6b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1364&q=80");
+    background-size: cover;
+    background-position: center;
+  }
+  .number__row {
+    background-color: $bg;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1px;
+    height: 100%;
+    align-items: stretch;
+    .number {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      cursor: pointer;
+      transition: color 0.3s linear, background-color 0.3s linear;
+      &:hover {
+        background-color: $bg;
+        color: white;
+      }
     }
   }
-  .layout__left {
-    grid-column: 1 / 2;
-  }
-  .layout__right {
-    grid-column: 3 / 4;
-  }
-  article {
-    grid-column: 2 / 3;
-    grid-row: 2 / 12;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+  .scrolling__text {
+    grid-column-start: 2;
+    white-space: nowrap;
+    overflow: hidden;
+    span {
+      animation: scrollText 3s linear infinite forwards;
     }
   }
-  div:nth-child(4) {
-    grid-row: 2 / 4;
-  }
-  div:nth-child(5) {
-    grid-row: 4 / 6;
-  }
-  div:nth-child(6) {
-    grid-row: 6 / 8;
-  }
-  div:nth-child(7) {
-    grid-row: 8 / 10;
-  }
-  div:nth-child(8) {
-    grid-row: 10 / 12;
-  }
+}
 
-  div:nth-child(10) {
-    grid-row: 2 / 4;
+@keyframes scrollText {
+  0% {
+    transform: translateX(-150px);
   }
-  div:nth-child(11) {
-    grid-row: 4 / 6;
+  50% {
+    transform: translateX(150px);
   }
-  div:nth-child(12) {
-    grid-row: 6 / 8;
-  }
-  div:nth-child(13) {
-    grid-row: 8 / 10;
-  }
-  div:nth-child(14) {
-    grid-row: 10 / 12;
+  100% {
+    transform: translateX(-150px);
   }
 }
