--- a/zoo/src/scss/styles.scss
+++ b/zoo/src/scss/styles.scss
@@ -10,30 +10,73 @@ body {
 }
 
 header {
-  height: 8vh;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  nav {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    font-size: 32px;
+    text-transform: lowercase;
+    ul {
+      display: flex;
+      align-items: center;
+      padding: 0px 15px;
+      &:hover {
+        background-color: gainsboro;
+      }
+      li {
+        cursor: pointer;
+        margin-right: 50px;
+      }
+      &:first-child {
+        &:hover {
+          li:not(:first-child) {
+            color: white !important;
+          }
+        }
+        li {
+          &:first-child {
+            margin-right: 120px;
+          }
+          &:not(:first-child) {
+            color: gainsboro;
+            margin-right: 50px;
+          }
+        }
+      }
+    }
+  }
 }
 
 main {
+  margin-top: 50px;
   display: grid;
-  grid-template-columns: repeat(3, minmax(250px, 1fr));
-  grid-template-rows: minmax(200px, 46vh);
-  grid-auto-rows: minmax(200px, 46vh);
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-auto-rows: 45vh;
   article {
+    cursor: pointer;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 9fr 1fr;
-
+    grid-template-rows: 10fr 0.8fr;
     img {
-      max-width: 100%;
+      min-width: 100%;
       height: 100%;
-      object-fit: cover;
     }
-    // p {
-    //   padding: 0.5rem;
-    // }
+    div {
+      display: flex;
+      align-items: center;
+      text-transform: uppercase;
+      padding-left: 10px;
+      h3 {
+        font-size: 14px;
+      }
+    }
   }
 }
