--- a/rodic-davidson/src/scss/styles.scss
+++ b/rodic-davidson/src/scss/styles.scss
@@ -1,10 +1,61 @@
-@import "reset.scss";
+@import 'reset.scss';
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+// header
+header {
+  position: sticky;
+  top: 0;
+  height: 8vh;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  width: 30%;
+  span {
+    color: gray;
+  }
+  &:hover {
+    color: blue;
+    cursor: pointer;
+  }
+}
+
+nav > ul {
+  width: 70%;
+  display: flex;
+  li {
+    margin-right: 2rem;
+    color: gray;
+    &:hover {
+      color: blue;
+      cursor: pointer;
+    }
+  }
+}
+
+// main
+main {
+  width: 70%;
+  margin-left: auto;
+  .main__section__first {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  .image {
+    background-image: url(https://rodicdavidson.co.uk/app/uploads/2018/07/St-Mary-Abbots-Front-Elevation-920x1000.jpg);
+    background-position: center center;
+  }
 }
