--- a/tolv/src/scss/styles.scss
+++ b/tolv/src/scss/styles.scss
@@ -7,13 +7,15 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 60px;
 }
 
 header {
-  position: sticky;
+  position: fixed;
   height: 60px;
+  width: 100%;
   top: 0;
-  background-color: #fff;
+  left: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
